clusters/lab/infrastructure/monitoring/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana-lab
  rules:
    - host: grafana-lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-metrics-k8s-stack-grafana
                port:
                  number: 80
